updates transaction types
