# controllers/transactions/create.js
@@ -11,9 +11,9 @@ const create = async (req, res, next) => {
       _id: userId,
     });
 
-    if (transactionType === 'debit') {
+    if (transactionType === 'withdrawal') {
       if (balance - amount < 0) {
-        return res.json({
+        return res.status(400).json({
           status: 'error',
           code: 400,
           message: 'Insufficient balance',
@@ -37,7 +37,7 @@ const create = async (req, res, next) => {
       balanceAfter,
     });
 
-    res.json({
+    res.status(201).json({
       status: 'success',
       code: 201,
       data: {
