# swagger.json
@@ -336,7 +336,11 @@
                               }
                             },
                             "transactionType": {
-                              "type": "string"
+                              "type": "string",
+                              "enum": [
+                                "withdrawal",
+                                "deposit"
+                              ]
                             },
                             "category": {
                               "type": "string"
@@ -364,7 +368,7 @@
                           "month": "january",
                           "year": 2008
                         },
-                        "transactionType": "credit",
+                        "transactionType": "withdrawal",
                         "category": "507f191e810c19729de860ea",
                         "comment": "40 litres of diesel",
                         "amount": 45,
@@ -441,8 +445,8 @@
                   "transactionType": {
                     "type": "string",
                     "enum": [
-                      "credit",
-                      "debit"
+                      "withdrawal",
+                      "deposit"
                     ]
                   },
                   "categoryId": {
@@ -464,7 +468,7 @@
                     "month": "january",
                     "year": 2008
                   },
-                  "transactionType": "credit",
+                  "transactionType": "withdrawal",
                   "categoryId": "507f191e810c19729de860ea",
                   "comment": "40 litres of diesel",
                   "amount": 45
@@ -520,8 +524,8 @@
                         "transactionType": {
                           "type": "string",
                           "enum": [
-                            "credit",
-                            "debit"
+                            "deposit",
+                            "withdrawal"
                           ]
                         },
                         "categoryId": {
@@ -550,7 +554,7 @@
                         "year": 2008
                       },
                       "id": "697f191e810c13978de860ea",
-                      "transactionType": "credit",
+                      "transactionType": "withdrawal",
                       "categoryId": "507f191e810c19729de860ea",
                       "comment": "40 litres of diesel",
                       "amount": 45,
@@ -778,8 +782,8 @@
           "transactionType": {
             "type": "string",
             "enum": [
-              "credit",
-              "debit"
+              "withdrawal",
+              "deposit"
             ]
           },
           "comment": {
